# FastAPI_education

./: .gitignore  README.md  hotels.py  main.py  pyproject.toml
shemas/: hotels.py
src/: config.py  main.py
src/api/: auth.py  bookings.py  dependecies.py  facilities.py  hotels.py  rooms.py
src/migrations/: env.py
src/migrations/versions/: 2024_09_23_1904-c06c4d21d267_add_hotels.py  2024_09_23_1905-67c9842342bb_add_rooms.py  2024_09_26_1451-1af28269de2e_add_users.py  2024_09_26_1453-1515ec705a26_add_username_and_name_for_users.py  2024_09_26_1526-67d8b60fd0a5_update_email_unique_true.py  2024_09_29_1631-c45f4cf7406e_add_bookings.py  2024_09_30_0010-628a9e7f3b6a_add_created_at_for_bookings.py  2024_10_03_0051-b8e7b33b6892_add_facilities.py  9c2efc04a425_add_rooms.py  c1f90da5be8d_initial_migration.py
src/models/: bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/repositories/: base.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py  utils.py
src/repositories/mappers/: base.py  mappers.py
src/services/: auth.py
src/shemas/: bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/utils/: db_manager.py
