[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Roman <bekkerrdm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.114.2"}
uvicorn = "^0.30.6"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
